[package]
name = "hd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25"
http-downloader = { version = "0.1", features = ["full"] }
url = { version = "2" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "tokio-macros"] }
anyhow = "1"
clap = { version = "4.0", features = ["derive"] }
